Lots of updates
- Move to gradle 7.1.1
- Updates for topLevelIndexes
- Start on #include and #library