@@ -1,6 +1,7 @@
 package aldor.spad;
 
 import aldor.typelib.AxiomInterface;
+import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.VfsUtilCore;
 import com.intellij.openapi.vfs.VirtualFile;
@@ -8,8 +9,10 @@ import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.search.GlobalSearchScopesCore;
 
 import java.util.Collections;
+import java.util.List;
 
 public class AldorEnvironment implements SpadEnvironment {
+    private static final Logger LOG = Logger.getInstance(AldorEnvironment.class);
     private final VirtualFile sdkDirectory;
 
     public AldorEnvironment(VirtualFile sdkDir) {
@@ -18,7 +21,13 @@ public class AldorEnvironment implements SpadEnvironment {
 
     @Override
     public AxiomInterface create() {
-        return AxiomInterface.createAldorLibrary(sdkDirectory.getPath(), Collections.emptyList());
+        LOG.info("AldorEnvironment::create " + sdkDirectory.getPath());
+        String aldorPath = sdkDirectory.getPath() + "/share/aldor/lib/aldor";
+        String algebraPath = sdkDirectory.getPath() + "/share/aldor/lib/algebra";
+        AxiomInterface aldorLibInterface = AxiomInterface.createAldorLibrary(aldorPath, Collections.emptyList());
+        AxiomInterface iface = AxiomInterface.createAldorLibrary(algebraPath, List.of(aldorLibInterface.env()));
+
+        return iface;
     }
 
     @Override
